[tool.poetry]
name = "live-159"
version = "0.1.0"
description = ""
authors = ["paulinhomacedo <macedopham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Flask = "^1.1.2"
dynaconf = "^3.1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
