[tool.poetry]
name = "live-159"
version = "0.1.0"
description = ""
authors = ["paulinhomacedo <macedopham@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "^20.1.0"
Flask = "^1.1.2"
dynaconf = "^3.1.4"
Flask-Cors = "^3.0.10"
flasgger = "^0.9.5"
importlib = "^1.0.4"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
